prevent full screen squishing (#511)

--- a/app/styles/components/_comparison_viewer_full.scss
+++ b/app/styles/components/_comparison_viewer_full.scss
@@ -2,6 +2,7 @@
   text-align: center;
 
   img {
+    max-width: none;
     box-shadow: 0 0 0 1px var(--very-light-gray);
   }
 
